# Viskshep

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  scaffold.sh  scaffold.sh.save
.github/workflows/: deploy-pages.yml  publish.yml
agentic-wavelet-pipeline/.github/workflows/: deploy.yml
agentic-wavelet-pipeline/agent/: bunfig.toml  package.json  tsconfig.json
agentic-wavelet-pipeline/agent/src/: main.ts
agentic-wavelet-pipeline/agent/src/mcp/: McpClient.ts  schemas.ts
agentic-wavelet-pipeline/agent/src/query/: QueryEngine.ts
agentic-wavelet-pipeline/agent/src/tools/: ArtifactRejectionTool.ts  ExecuteWSTTool.ts
agentic-wavelet-pipeline/agent/tests/: schema_validation.test.ts
agentic-wavelet-pipeline/open-source-wst/: pyproject.toml
agentic-wavelet-pipeline/open-source-wst/scripts/: generate_sim_data.py
agentic-wavelet-pipeline/open-source-wst/src/transient_wst/: __init__.py  core.py  foundation.py  io.py  mcp_server.py  reduction.py  utils.py
agentic-wavelet-pipeline/open-source-wst/tests/: test_foundation.py  test_scattering.py
agentic-wavelet-pipeline/web/: index.html  package.json  tailwind.config.js  vite.config.js
agentic-wavelet-pipeline/web/src/: App.jsx  index.css
open-source-wst/: CMakeLists.txt  README.md  pyproject.toml
open-source-wst/cpp/: cpu_wst_engine.h  jtfs_kernel.cuh  memory_staging.cu  memory_staging.cuh  wst_bindings.cu  wst_bridge.cu  wst_bridge.h  wst_kernel.cuh
open-source-wst/src/vikshep/: __init__.py  core.py  foundation.py  io.py  mcp_server.py  reduction.py  utils.py
open-source-wst/tests/: test_dispatch.py  test_foundation.py  test_lipschitz.py  test_parseval.py  test_scattering.py
web/: package.json
web/src/: App.jsx  ScatteringVisualizer.jsx  index.css
