[build-system]
requires = ["scikit-build-core", "pybind11", "cmake"]
build-backend = "scikit_build_core.build"

# ── PEP 621 project metadata ───────────────────────────────────────────────────
[project]
name = "vikshep"
version = "0.2.0"
description = "Vikshep — Vectorized Invariant Kernels for Scattering & High-performance Extraction Pipelines. A Zero-Copy C++/CUDA Wavelet Scattering Transform engine."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Samvardhan Singh" }]
keywords = ["wavelet", "scattering-transform", "time-series", "signal-processing", "mcp", "anomaly-detection", "cuda", "hpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# ── Runtime dependencies ───────────────────────────────────────────────────────
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.13,<1.15",
    "kymatio>=0.3.0",
    "scikit-learn>=1.5,<2",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://samvardhan03.github.io/Viskshep"
Repository = "https://github.com/samvardhan03/Viskshep"

# ── Optional / development extras ─────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
gpu = [
    "torch>=2.2",
]
foundation = [
    "torch>=2.2",
]

# ── Entry points ───────────────────────────────────────────────────────────────
[project.scripts]
vikshep-server = "vikshep.mcp_server:main"

# ── scikit-build-core configuration ───────────────────────────────────────────
[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/vikshep"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

# ── Ruff linter config ────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# ── Mypy strict type checking ─────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
